--- a/src/com/App.form
+++ b/src/com/App.form
@@ -34,12 +34,12 @@
           <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="28ae5" class="javax.swing.JButton" binding="buttonmsg">
+      <component id="28ae5" class="javax.swing.JButton" binding="submit">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="submit"/>
         </properties>
       </component>
       <hspacer id="7bf7b">
@@ -82,6 +82,14 @@
         </constraints>
         <properties>
           <text value="Project route"/>
+        </properties>
+      </component>
+      <component id="d7808" class="javax.swing.JButton" binding="settings">
+        <constraints>
+          <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Settings"/>
         </properties>
       </component>
     </children>
